plugins {
  id("org.springframework.boot") version "3.3.4"
  id("io.spring.dependency-management") version "1.1.6"
  id 'java'
  id "org.sonarqube" version "5.0.0.4638"
  id 'checkstyle'
  id 'jacoco'
  id 'maven-publish'
  id 'nu.studer.jooq' version '8.1'
  //docker-compose needed to startup a postgres container for Jooq codegen
  id 'com.avast.gradle.docker-compose' version "0.16.11"
  //Flyway added manually here, as it's used for the Jooq codegen
  id "org.flywaydb.flyway" version "9.16.0"
  id "org.jetbrains.gradle.plugin.idea-ext" version "0.7" // Can be removed once https://youtrack.jetbrains.com/issue/IDEA-154038 is fixed
}

group = 'uk.co.nstauthority'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

def fileUploadLibraryVersion = 'v2.6.0'

sourceSets {
  epmqMessagesJarIntegrationTest {}
}

repositories {
  mavenCentral()
  mavenLocal()
  maven { url "https://build.shibboleth.net/nexus/content/repositories/releases/" } // Required for opensaml deps
  maven { url "https://nexus.fivium.co.uk/repository/maven-releases/" }
  maven { url "https://nexus.fivium.co.uk/repository/maven-snapshots/" }
}

dependencies {
  developmentOnly("org.springframework.boot:spring-boot-devtools")

  implementation 'org.springframework.boot:spring-boot-starter-freemarker'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-configuration-processor'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation "org.springframework.data:spring-data-envers"
  implementation 'org.springframework.security:spring-security-saml2-service-provider'
  implementation 'org.springframework.session:spring-session-core'
  implementation 'org.springframework.session:spring-session-jdbc'
  implementation 'org.flywaydb:flyway-core'
  implementation 'org.flywaydb:flyway-database-postgresql'
  implementation 'org.apache.commons:commons-lang3:3.14.0'
  implementation 'org.apache.commons:commons-collections4:4.4'
  implementation 'org.apache.commons:commons-text:1.12.0'

  implementation 'uk.co.fivium.energyportalapi:client:v12.5.0'
  implementation 'uk.co.fivium.digital.energyportalteamaccesslibrary:energy-portal-team-access-libray:v1.0.0'
  implementation 'uk.co.fivium.digitalformlibrary:digital-form-library:spring-boot-3.2-support-SNAPSHOT'
  implementation "uk.co.fivium:file-upload-spring-boot-starter:${fileUploadLibraryVersion}"
  implementation 'uk.co.fivium:digital-payments-library-spring-boot-starter:v4.0.0'
  implementation 'uk.co.fivium:digital-notification-library-spring-boot-starter:v1.0.1'
  implementation 'uk.co.fivium:digital-document-library-spring-boot-starter:v2.0.1'
  implementation 'uk.co.fivium:ftss-client-spring-boot-starter:v1.0.0'
  implementation 'uk.co.fivium.feedbackmanagementservice:client:v2.3.0'
  implementation 'uk.co.fivium.energyportalmessagequeue:spring-boot-starter:v2.0.0'

  implementation 'org.springframework.boot:spring-boot-starter-jooq'
  implementation 'org.jooq:jooq-codegen'
  implementation 'org.jooq:jooq-meta'

  implementation 'net.javacrumbs.shedlock:shedlock-spring:5.6.0'
  implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.6.0'

  implementation 'io.micrometer:micrometer-registry-statsd'

  runtimeOnly 'org.postgresql:postgresql'
  jooqGenerator 'org.postgresql:postgresql'

  // Using H2 for the tests as a temporary measure until a final decision is made on which database is being used.
  testImplementation 'com.h2database:h2'

  testImplementation "uk.co.fivium:file-upload-spring-boot-starter-test:${fileUploadLibraryVersion}"

  testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.testcontainers:postgresql'
  testImplementation 'org.testcontainers:junit-jupiter'
  testImplementation 'org.springframework.security:spring-security-test'

  epmqMessagesJarIntegrationTestImplementation 'org.springframework.boot:spring-boot-starter-test'
  epmqMessagesJarIntegrationTestImplementation 'uk.co.nstauthority.fieldconsents:fieldconsents-epmq-messages:integration-test'
  epmqMessagesJarIntegrationTestImplementation 'uk.co.fivium.energyportalmessagequeue:spring-boot-starter:v2.0.0'

  constraints {
    implementation("com.google.guava:guava:32.1.3-jre") {
      because("opensaml core uses a version with vulnerabilities")
    }

    implementation("org.bouncycastle:bcpkix-jdk18on:1.78") {
      because("opensaml core uses a version with vulnerabilities")
    }
  }
}

tasks {
  test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    systemProperty 'spring.profiles.active', 'test'
    maxParallelForks 4
  }
  bootJar {
    archiveFileName.set("${rootProject.name}.jar")
  }
}

dockerCompose {
  useComposeFiles = ['devtools/jooq-compose.yml']
}

flyway {
  user = 'fcs_app'
  password = 'dev1'
  schemas = ['fcs']
  placeholders = [
      'datawarehouse-user-password' : 'dev1',
      'application-schema' : 'fcs'
  ]
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs.add("-parameters")
}

// Force IJ to include compiler params. Can be removed once https://youtrack.jetbrains.com/issue/IDEA-154038 is fixed
idea.project.settings {
  compiler {
    javac {
      javacAdditionalOptions "-parameters"
    }
  }
}

//Set the url before the build to dynamically set the port
//This must be done here, not above, as the serviceInfos object won't exist at configuration time
flywayMigrate.doFirst {
  url = 'jdbc:postgresql://' + dockerCompose.servicesInfos['local-db'].host + ':' + dockerCompose.servicesInfos['local-db'].ports[5432] + '/fcs'
  System.setProperty('DB_URL', url)
}

jooq {
  version = dependencyManagement.importedProperties['jooq.version']
  configurations {
    main {
      generateSchemaSourceOnCompilation = false
      generationTool {
        jdbc {
          driver = 'org.postgresql.Driver'
          user = 'fcs_app'
          password = 'dev1'
        }
        generator {
          database {
            name = 'org.jooq.meta.postgres.PostgresDatabase'
            inputSchema = 'fcs'
          }
          target {
            packageName = 'uk.co.nstauthority.fieldconsents.generated.jooq'
          }
        }
      }
    }
  }
}

flywayMigrate.dependsOn(composeUp)

generateJooq.dependsOn(flywayMigrate)

generateJooq.finalizedBy(composeDown)

generateJooq.doFirst {
  //Jooq doesn't allow you to specify the config at runtime
  //This will make the field modifiable so we can change the url
  def clazz = generateJooq.class.superclass
  def field = clazz.getDeclaredField("jooqConfiguration")

  field.accessible = true

  def jooqConfiguration = (org.jooq.meta.jaxb.Configuration) field.get(generateJooq)
  jooqConfiguration.jdbc.url = System.getProperty('DB_URL')
}

sonarqube {
  properties {
    property 'sonar.projectKey', "Fivium_${rootProject.name}"
    property 'sonar.organization', 'fivium-gh'
    property 'sonar.host.url', 'https://sonarcloud.io'
    property 'sonar.login', System.getenv('SONARCLOUD_TOKEN')

    if (System.getenv('DRONE_PULL_REQUEST') != null) {
      property 'sonar.pullrequest.key', System.getenv('DRONE_PULL_REQUEST')
      property 'sonar.pullrequest.base', System.getenv('DRONE_TARGET_BRANCH')
      property 'sonar.pullrequest.branch', System.getenv('DRONE_SOURCE_BRANCH')
      property 'sonar.pullrequest.provider', 'github'
      property 'sonar.pullrequest.github.repository', 'field-consents'
      property 'sonar.pullrequest.github.endpoint', 'https://api.github.com/'
    } else {
      property 'sonar.branch.name', System.getenv('DRONE_BRANCH')
      if (System.getenv('DRONE_BRANCH') != 'develop') {
        property 'sonar.branch.target', 'develop'
      }
      property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"
    }
  }
}

checkstyle {
  config = rootProject.resources.text.fromFile('devtools/checkstyle.xml')
  toolVersion '10.4'
  ignoreFailures = false
  maxWarnings = 0
}

checkstyleMain.exclude 'uk/co/nstauthority/fieldconsents/generated/**'

jacocoTestReport {
  reports {
    xml.required = true
  }
}

tasks.register('epmqMessagesJar', Jar) {
  from sourceSets.main.output
  include 'uk/co/nstauthority/fieldconsents/epmqmessage/**'
  archiveBaseName = 'field-consents-epmq-messages'
}

publishing {
  publications {
    epmqMessages(MavenPublication) {
      groupId = 'uk.co.nstauthority.fieldconsents'
      // The artifact ID below must start with fieldconsents to make it unique, otherwise Spring's bootJar task will fail on EPMQ
      // if there are two dependencies with the epmq-messages artifact id with the same version.
      artifactId = 'fieldconsents-epmq-messages'
      version = System.getenv("EPMQ_MESSAGES_JAR_VERSION") ?: version

      artifact(epmqMessagesJar)
    }
    epmqMessagesIntegrationTest(MavenPublication) {
      groupId = 'uk.co.nstauthority.fieldconsents'
      // The artifact ID below must start with fieldconsents to make it unique, otherwise Spring's bootJar task will fail on EPMQ
      // if there are two dependencies with the epmq-messages artifact id with the same version.
      artifactId = 'fieldconsents-epmq-messages'
      version = 'integration-test'

      artifact(epmqMessagesJar)
    }
  }
  repositories {
    maven {
      name = 'snapshots'
      url = 'https://nexus.fivium.co.uk/repository/maven-snapshots'
      credentials {
        username = System.getenv("NEXUS_USERNAME")
        password = System.getenv("NEXUS_PASSWORD")
      }
    }

    maven {
      name = 'releases'
      url = 'https://nexus.fivium.co.uk/repository/maven-releases'
      credentials {
        username = System.getenv("NEXUS_USERNAME")
        password = System.getenv("NEXUS_PASSWORD")
      }
    }
  }
}

tasks.register('epmqMessagesJarIntegrationTest', Test) {
  useJUnitPlatform()
  group 'verification'
  //Need to explicitly override the default classesDirs and classpath for a test task
  testClassesDirs = sourceSets.epmqMessagesJarIntegrationTest.output.classesDirs
  classpath = sourceSets.epmqMessagesJarIntegrationTest.runtimeClasspath

  mustRunAfter(publishEpmqMessagesIntegrationTestPublicationToMavenLocal)
}

tasks.register('epmqMessagesJarIntegrationTestReport', TestReport) {
  destinationDir = file("$buildDir/reports/epmqMessagesJarIntegrationTests")
  //Specify test result directory rather than task names so this task runs even if the tests fail
  testResultDirs = [epmqMessagesJarIntegrationTest.binResultsDir]

  mustRunAfter(epmqMessagesJarIntegrationTest)
}
